--- a/cppart/cppart.vcxproj
+++ b/cppart/cppart.vcxproj
@@ -22,17 +22,23 @@
     <ClInclude Include="anova.h" />
     <ClInclude Include="bestsplit.h" />
     <ClInclude Include="cppart.h" />
+    <ClInclude Include="cptable.h" />
     <ClInclude Include="data_handler.h" />
     <ClInclude Include="globals.h" />
     <ClInclude Include="partition.h" />
+    <ClInclude Include="print_tree.h" />
     <ClInclude Include="structures.h" />
+    <ClInclude Include="xval.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="anova.cpp" />
     <ClCompile Include="bestsplit.cpp" />
     <ClCompile Include="cppart.cpp" />
+    <ClCompile Include="cptable.cpp" />
     <ClCompile Include="data_handler.cpp" />
     <ClCompile Include="partition.cpp" />
+    <ClCompile Include="print_tree.cpp" />
+    <ClCompile Include="xval.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{F12A2505-42F7-40E8-B907-E9B30D708AB6}</ProjectGuid>
