--- a/windows/cppart/makefile_win
+++ b/windows/cppart/makefile_win
@@ -1,8 +1,5 @@
-all: utils.o data_handler.o anova.o bestsplit.o xval.o cptable.o print_tree.o partition.o cppart.o cppart runmany.o runmany
+all: data_handler.o anova.o bestsplit.o xval.o cptable.o print_tree.o partition.o cppart.o cppart runmany.o runmany
 
-
-utils.o: utils.cpp
-	x86_64-w64-mingw32-g++ --std=c++11 -c utils.cpp
 data_handler.o: data_handler.cpp
 	x86_64-w64-mingw32-g++ --std=c++11 -c data_handler.cpp
 anova.o: anova.cpp
@@ -20,11 +17,11 @@ partition.o: partition.cpp
 cppart.o: cppart.cpp 
 	x86_64-w64-mingw32-g++ --std=c++11 -c cppart.cpp
 cppart: data_handler.o anova.o bestsplit.o xval.o cptable.o print_tree.o partition.o cppart.o
-	x86_64-w64-mingw32-g++ --std=c++11 data_handler.o anova.o bestsplit.o xval.o cptable.o utils.o print_tree.o partition.o cppart.o -o cppart
-runmany.o: runmany.cpp	
+	x86_64-w64-mingw32-g++ --std=c++11 data_handler.o anova.o bestsplit.o xval.o cptable.o print_tree.o partition.o cppart.o -o cppart
+runmany.o:
 	x86_64-w64-mingw32-g++ --std=c++11 -c runmany.cpp
 runmany:	
-	x86_64-w64-mingw32-g++ --std=c++11 data_handler.o anova.o bestsplit.o xval.o cptable.o print_tree.o partition.o utils.o runmany.o -o runmany
+	x86_64-w64-mingw32-g++ --std=c++11 data_handler.o anova.o bestsplit.o xval.o cptable.o print_tree.o partition.o cppart.o -o runmany
 
 clean:
 	rm *.o cppart *.tree runmany
