--- a/windows/cppart/makefile
+++ b/windows/cppart/makefile
@@ -27,4 +27,4 @@ runmany:
 	x86_64-w64-mingw32-g++ --std=c++11 data_handler.o anova.o bestsplit.o xval.o cptable.o print_tree.o partition.o utils.o runmany.o -o runmany.exe
 
 clean:
-	rm *.o cppart *.tree runmany
+	rm *.o cppart.exe runmany.exe
