--- a/src/Makefile
+++ b/src/Makefile
@@ -2,14 +2,18 @@
 
 OBJS=datatab.o  metric.o  node.o lacart.o utils.o data_handler.o
 
-LFLAGS=-g
+# for function inlining, use at least -O3 or -Ofast
 
-CFLAGS=-std=c++11 -g -Wall -O2
+LFLAGS=-g -Ofast -lm -lomp
+CFLAGS=-std=c++11 -g -Wall -Ofast -fopenmp
+
+#LFLAGS=-g -Ofast
+#CFLAGS=-std=c++11 -g -Wall -Ofast
 
 INCLUDES=-I.
 
 lacart: $(OBJS)
-	g++ $(LFLAGS) -o lacart $(OBJS) -lm
+	g++ -o lacart $(OBJS) $(LFLAGS) 
 
 .cc.o:
 	g++ $(INCLUDES) $(CFLAGS) -c $<
