Disabled parallel code.

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,11 +5,11 @@ OBJS2=datatab.o metric.o node.o utils.o data_handler.o forest.o laforest.o
 
 # for function inlining, use at least -O3 or -Ofast
 
-LFLAGS=-g -Ofast -lm -lomp
-CFLAGS=-std=c++11 -g -Wall -Ofast -fopenmp
+#LFLAGS=-g -Ofast -lm -lomp
+#CFLAGS=-std=c++11 -g -Wall -Ofast -fopenmp
 
-#LFLAGS=-g -Ofast
-#CFLAGS=-std=c++11 -g -Wall -Ofast
+LFLAGS=-g -Ofast
+CFLAGS=-std=c++11 -g -Wall -Ofast
 
 INCLUDES=-I.
 
